--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
 include babel_transpiling/static/npm/@babel/standalone@7.12.15/babel.min.js
+include babel_transpiling/static/npm/babel-plugin-transform-import-cssm@1.0.0/index.standalone.js
 global-exclude __pycache__
 global-exclude *.py[co]
